--- a/product2.html
+++ b/product2.html
@@ -56,8 +56,8 @@
                         </div>
                         <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
                     </div> -->
-                </div>
-            </nav>
+        </div>
+        </nav>
         </div>
     </header>
     <main>
@@ -98,6 +98,53 @@
                         <button class="orange-button addToCart">ADD TO CART</button>
                     </div>
                 </div>
+            </section>
+            <section class="features">
+                <div class="text-boxWide">
+                    <h3 class="black-32px">
+                        FEATURES
+                    </h3>
+                    <p class="black-p50">As the headphones all others are measured against, the XX99 Mark I demonstrates
+                        over five decades of audio expertise, redefining the critical listening experience. This pair of
+                        closed-back headphones are made of industrial, aerospace-grade materials to emphasize durability
+                        at a relatively light weight of 11 oz.<br><br>
+
+                        From the handcrafted microfiber ear cushions to the robust metal headband with inner damping
+                        element, the components work together to deliver comfort and uncompromising sound. Its
+                        closed-back design delivers up to 27 dB of passive noise cancellation, reducing resonance by
+                        reflecting sound to a dedicated absorber. For connectivity, a specially tuned cable is included
+                        with a balanced gold connector.</p>
+                </div>
+                <div class="inBox">
+                    <h3 class="black-32px">
+                        IN THE BOX
+                    </h3>
+                    <div class="inBoxDivs">
+                        <div>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">Headphone Unit</p>
+                        </div>
+                        <div>
+                            <p class="orange-15px">2x</p>
+                            <p class="black-p50">Replacement Earcups</p>
+                        </div>
+                        <div>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">User Manual</p>
+                        </div>
+                        <div>
+                            <p class="orange-15px">1x</p>
+                            <p class="black-p50">3.5mm 5m Audio Cable</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="img-reviews">
+                <div>
+                    <img src="img/Headphones/XX99-I-Review/img-1.png" alt="XX99">
+                    <img src="img/Headphones/XX99-I-Review/img-2.png" alt="XX99">
+                </div>
+                <div><img src="img/Headphones/XX99-I-Review/img-3.png" alt="XX99"></div>
             </section>
             <section class="otherProducts">
                 <h5 class="black-32px">YOU MAY ALSO LIKE</h2>
