--- a/product2.html
+++ b/product2.html
@@ -37,27 +37,7 @@
                         </li>
                     </ul>
                 </div>
-                <!-- <div class="basketList-div">
-                    <button id="basket"><img src="img/basket.svg" alt="basket"></button>
-                    <div id="list" style="display: none;">
-                        <div id="cartSumAndRemove">
-                            <h4>CART (0)</h4>
-                            <p class="black-p50">Remove All</p>
-                        </div>
-                        <div id="items">
-                            <h2 class="empty-text">CART IS EMPTY</h2>
-                        </div>
-                        <div class="totalAndButton">
-                            <div id="total">
-                                <p class="black-p50">TOTAL</p>
-                                <h3>0$</h3>
-                            </div>
-                            <button class="orange-button">CHECKOUT</button>
-                        </div>
-                        <button id="hideList"><img src="img/hide-list.svg" alt="hideList"></button>
-                    </div> -->
-        </div>
-        </nav>
+            </nav>
         </div>
     </header>
     <main>
@@ -69,8 +49,8 @@
                 <img src="img/Headphones/big-imgs/XX99-I.png" alt="XX99">
                 <div class="text-div">
                     <h2 class="black-40px">
-                        XX99 Mark I
-                        Headphones
+                        XX99 MARK I
+                        HEADPHONES
                     </h2>
                     <p class="black-p50">As the gold standard for headphones, the classic XX99 Mark I offers detailed
                         and accurate audio reproduction for audiophiles, mixing engineers, and music aficionados alike
